# SerialAsst

./: CMakeLists.txt  README.md  SerialAsst.pro  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  resource.qrc  serialcontroller.cpp  serialcontroller.h
docs/: index.md
icon/: Thumbs.db
